Added a reference to WebFramework.

--- a/FilePlugin.csproj
+++ b/FilePlugin.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Web\WebFramework\WebFramework.csproj" />
+  </ItemGroup>
+
 </Project>
